# docs-algorithms-apply-diabetes-dataset

./: 404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy  deploy.yml
docs/: index.md  introduction.md  the_dataset.md
docs/supervised_learning/: knn.md  mlp.md  random_florest.md
search/: search_index.json
supervised_learning/knn/: index.html
supervised_learning/mlp/: index.html
supervised_learning/random_florest/: index.html
supervised_learning/svm/: index.html
supervised_learning/xgboost/: index.html
the_dataset/: index.html
unsupervised_learning/k_means/: index.html
