[project]
name = "alg-docs"
version = "0.1.0"
description = ""
authors = [
    {name = "AndersonIvanildo",email = "andersonivanildo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-terminal (>=4.7.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
